--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body{
 	background:white;
 	overflow-x:hidden;
 	overflow-y:hidden;
-	font-family:Droid Sans;
+	font-family:Droid Sans Arial Ubuntu;
 }
 td{
 	height:300px;
