--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -13,7 +13,7 @@
 @import url("pygment.css");
 @import url("typogrify.css");
 @import url(//fonts.googleapis.com/css?family=Yanone+Kaffeesatz&subset=latin);
-@import url(//fonts.googleapis.com/css?family=Roboto);
+@import url(//fonts.googleapis.com/css?family=Roboto+Condensed:600);
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);
 
 /***** Global *****/
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.1;
 	margin-bottom: .8em;
-    font-family: 'Roboto', arial, serif;
+    font-family: 'Roboto Condensed', arial, serif;
 }
 
 h3, h4, h5, h6 { margin-top: .8em; }
