--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -228,7 +228,7 @@ img.left, figure.left {float: left; margin: 0 2em 2em 0;}
 	margin-bottom: 2em;
 	overflow: hidden;
 	padding: 20px;
-	width: 760px;
+	width: 95%;
 	
 	border-radius: 10px;
 	-moz-border-radius: 10px;
@@ -257,7 +257,7 @@ img.left, figure.left {float: left; margin: 0 2em 2em 0;}
 	margin-bottom: 2em;
 	overflow: hidden;
 	padding: 20px 20px;
-	width: 760px;
+	width: 95%;
 	
 	border-radius: 10px;
 	-moz-border-radius: 10px;
@@ -346,7 +346,7 @@ img.left, figure.left {float: left; margin: 0 2em 2em 0;}
 	overflow: hidden;
 	padding: 20px;
 	text-align: left;
-	width: 760px;
+	width: 95%;
 	
 	border-radius: 10px;
 	-moz-border-radius: 10px;
