--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -21,8 +21,8 @@
 body {
     background: #F5F4EF;
     color: #000305;
-    -webkit-font-smoothing: antialiased
-    font-size: 18px !important; /* Base font size: 14px */
+    -webkit-font-smoothing: antialiased;
+    font-size: 18px; /* Base font size: 14px */
     font-family: 'Source Sans Pro', 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.14;
     margin: 0;
